@@ -4,6 +4,7 @@ svbCHANGELOG
 | VERSION: 0.6.0RC3     |
 +-----------------------+
 BUGFIXES
+03-05-06    Fixed cmdline installer, envRebuild.php
 01-05-06    Installer password was wiped doing a rebuild, now fixed (Julien Casanova)
 
 IMPROVEMENTS
